--- a/client/src/App.css
+++ b/client/src/App.css
@@ -538,6 +538,93 @@ a {
     margin: 20px 0 10px 10px;
     float: left;
   }
+  .top-left h1 {
+    font-size:45px;
+    line-height: 50px;
+    padding: 0 0 0 0px;
+    letter-spacing: .01em;
+  }
+  .top-left {
+    margin-top: -55px;
+  }
+  .bottom-left {
+    padding: 0 0 0 2px;
+  }
+  .plant-based-text {
+    margin-bottom: 30px !important;
+  }
+  .plant-based-text h1 {
+    font-size: 20px !important;
+    letter-spacing: .05em;
+    line-height: 10px;
+  }
+  .home_subtitle {
+    margin-bottom: 60px !important;
+  }
+  .bottom-left {
+    margin-bottom: -10px;
+  }
+
+  .background {
+    width: auto !important;
+    object-fit: cover;
+  }
+  .delivered-title {
+    letter-spacing: .15em!important;
+    font-size: 28px!important;
+    line-height:16px!important;
+  }
+  .delivered-title2 {
+    font-size: 22px!important;
+  }
+  .delivered-padding {
+    padding: 25px 0;
+  }
+  .delivered-titles-container {
+    padding-top: 15px!important;
+    padding-bottom: 0px!important;
+  }
+  .delivered-weekly-container {
+    width: auto !important;
+    height: auto!important;
+    padding-bottom: 20px;
+  }
+  .delivered-weekly-container2 {
+    padding-bottom: 0!important;
+    margin-bottom: 0!important;
+    padding-left: 10px!important;
+    padding-right: 10px!important;
+  }
+  .delivered-weekly-bullets-container {
+    padding-left: 0px !important;
+  }
+  .delivered-bullets-text {
+    margin: 5px!important;
+    font-size: 14px!important;
+  }
+  hr.three {
+    width: auto!important;
+    margin: 10px auto;
+    border: none;
+  }
+  .pause-anytime {
+    padding: 0!important;
+  }
+
+  .try-us-today-button-container {
+    text-align: center;
+    margin: 50px 0 0 0;
+  }
+
+  .visibility-hidden-mobile {
+    visibility: hidden!important;
+    display: none;
+  }
+
+  .mobile-center {
+    padding-left: 0px;
+    text-align: center;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -575,33 +662,10 @@ a {
     object-fit: cover;
   }
   .top-left h1 {
-    font-size:45px;
     font-weight: bold;
-    line-height: 50px;
-    padding: 0 0 0 0px;
-    letter-spacing: .01em;
-  }
-  .top-left {
-    margin-top: -55px;
-  }
-  .bottom-left {
-    padding: 0 0 0 2px;
-    /* margin-top: 100px; */
-  }
-  .plant-based-text {
-    margin-bottom: 30px !important;
   }
   .plant-based-text h1 {
-    font-size: 20px !important;
     font-weight: bold;
-    letter-spacing: .05em;
-    line-height: 10px;
-  }
-  .home_subtitle {
-    margin-bottom: 60px !important;
-  }
-  .bottom-left {
-    margin-bottom: -10px;
   }
   .zero-waste-cell {
     margin-top: 0!important;
@@ -684,11 +748,6 @@ a {
   .try-us-today-button-container {
     text-align: center;
     margin: 50px 0 0 0;
-  }
-
-  .visibility-hidden-mobile {
-    visibility: hidden!important;
-    display: none;
   }
 
   .mobile-center {
