--- a/InfiniteMeals/InfiniteMeals/ViewModel/Login/LoginPage.xaml
+++ b/InfiniteMeals/InfiniteMeals/ViewModel/Login/LoginPage.xaml
@@ -16,8 +16,8 @@
                 <Entry x:Name="loginEmail" FontFamily="CapsRegular"  Placeholder="Email" TextColor="Black"></Entry>
                 <Entry x:Name="loginPassword" FontFamily="CapsRegular" Placeholder="Password"  IsPassword="True"></Entry>
                 <Button x:Name="LoginButton" FontFamily="CapsRegular" BackgroundColor = "Green" Text="Login" TextColor="White" Clicked="ClickedLogin"/>
-                    <Button x:Name="googleLoginButton" FontFamily="CapsRegular" BackgroundColor="Blue" Text="Google Login" TextColor="White" Clicked="googleLoginButtonClicked"
-                        />
+                    <Button x:Name="googleLoginButton" FontFamily="CapsRegular" BackgroundColor="Blue" Text="Google Login" TextColor="White" Clicked="googleLoginButtonClicked"/>
+                    <Button x:Name="facebookLoginButton" FontFamily="CapsRegular" BackgroundColor="Blue" Text="Facebook Login" TextColor="White" Clicked="facebookLoginButtonClicked"/>
                     <Label x:Name="forgotPasswordLabel"
                        Text="Forgot Password?"
                        FontSize="Medium"
