--- a/client/src/App.css
+++ b/client/src/App.css
@@ -553,6 +553,12 @@ a {
   display:none;
 }
 
+#no-display-monday {
+  /* display:none; */
+  visibility: hidden;
+  /* cursor:default; */
+}
+
 .top-right {
   position: absolute;
   top: 8px;
